--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "bugs": {
     "url": "https://github.com/theTardigrade/DataCache/issues"
   },
-  "homepage": "https://github.com/theTardigrade/DataCache#readme"
+  "homepage": "https://github.com/theTardigrade/DataCache#readme",
+  "devDependencies": {
+    "babel-preset-latest": "^6.22.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-optimize-js": "^1.1.0",
+    "gulp-uglify": "^2.0.1"
+  }
 }
