--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/theTardigrade/DataCache#readme",
   "devDependencies": {
-    "babel-preset-latest": "^6.22.0",
+    "babel-plugin-transform-es2015-block-scoping": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-optimize-js": "^1.1.0",
