--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/theTardigrade/DataCache#readme",
   "devDependencies": {
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
