--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-optimize-js": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-strip-comments": "^2.4.4",
     "gulp-uglify": "^2.0.1"
   }
 }
