--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "babel-plugin-transform-es2015-block-scoping": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-beautify": "^2.0.1",
     "gulp-optimize-js": "^1.1.0",
+    "gulp-remove-empty-lines": "0.0.8",
     "gulp-rename": "^1.2.2",
     "gulp-strip-comments": "^2.4.4",
     "gulp-uglify": "^2.0.1"
