--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-remove-empty-lines": "0.0.8",
     "gulp-rename": "^1.2.2",
     "gulp-strip-comments": "^2.4.4",
-    "gulp-uglify": "^2.0.1"
+    "gulp-uglify": "^2.0.1",
+    "gulp-wrap": "^0.13.0"
   }
 }
