--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.22.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-beautify": "^2.0.1",
